<resources>
    <string name="app_name">WeatherApp</string>
    <string name="temperature">%s\u00B0</string>
    <string name="feels_like">Feels like: %s\u00B0</string>
    <string name="wind_speed">Wind: %s km/h</string>
    <string name="wind_speed_no_text">%s km/h</string>
    <string name="percentage">%s%%</string>
    <string name="meters">%sm</string>
    <string name="hPa">%shPa</string>

    <string name="nothing"/>

    <string name="weather_icon_description">Weather icon</string>
    <string name="weather_code_clear_sky">Clear sky</string>
    <string name="weather_code_mainly_clear">Mainly clear</string>
    <string name="weather_code_partly_cloudy">Partly cloudy</string>
    <string name="weather_code_cloudy">Cloudy</string>
    <string name="weather_code_fog">Fog</string>
    <string name="weather_code_drizzle">Drizzle</string>
    <string name="weather_code_freezing_drizzle">Freezing drizzle</string>
    <string name="weather_code_rain">Rain</string>
    <string name="weather_code_freezing_rain">Freezing rain</string>
    <string name="weather_code_shower_rain">Rain showers</string>
    <string name="weather_code_snow_fall">Snow</string>
    <string name="weather_code_snow_grains">Snow grains</string>
    <string name="weather_code_snow_showers">Snow showers</string>
    <string name="weather_code_thunderstorm">Thunderstorm</string>

    <string name="button_grant_permission">Grant permission</string>
    <string name="button_refresh">Refresh</string>
    <string name="button_hourly">Hourly</string>
    <string name="button_daily">Daily</string>

    <string name="label_temperature">Temperature</string>
    <string name="label_feels_like">Feels like</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_sunset">Sunset</string>
    <string name="label_rain_chance">Rain chance</string>
    <string name="label_uv_index">UV index</string>
    <string name="label_cloud_cover">Cloud cover</string>
    <string name="label_visibility">Visibility</string>
    <string name="label_surface_pressure">Surface pressure</string>
    <string name="label_wind_speed">Wind speed</string>

    <string name="error_no_location_header">No location access</string>
    <string name="error_no_location_access_text">You need to give location permission</string>
    <string name="error_no_location_off_text">Check if your location is turned on</string>

    <string name="error_no_internet_header">No internet access</string>
    <string name="error_no_internet_text">Please check internet connectivity</string>

    <string name="date_today">Today</string>
    <string name="date_now">Now</string>
    <string-array name="date_week_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="date_week_day_short">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
</resources>