<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/gray">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/errorTextHeader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="100dp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/errorText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toBottomOf="@+id/errorTextHeader"/>

            <Button
                android:id="@+id/errorRefresh"
                android:layout_marginHorizontal="100dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_refresh"
                android:height="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textSize="15sp"
                style="?attr/materialButtonOutlinedStyle"
                app:layout_constraintTop_toBottomOf="@+id/errorText" />

            <Button
                android:id="@+id/errorPermission"
                android:layout_marginHorizontal="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_grant_permission"
                android:height="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textSize="15sp"
                android:visibility="gone"
                tools:visibility="visible"
                style="?attr/materialButtonOutlinedStyle"
                app:layout_constraintTop_toBottomOf="@+id/errorRefresh" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/location"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="50dp"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/temperature"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="150sp"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toBottomOf="@+id/location"/>

            <ImageView
                android:id="@+id/statusIcon"
                android:adjustViewBounds="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/weather_icon_description"
                app:layout_constraintTop_toBottomOf="@+id/temperature"/>

            <TextView
                android:id="@+id/status"
                android:layout_marginTop="25dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toBottomOf="@+id/statusIcon"/>

            <TextView
                android:id="@+id/feelsLike"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toBottomOf="@+id/status"/>

            <TextView
                android:id="@+id/windSpeed"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                app:layout_constraintTop_toBottomOf="@+id/feelsLike"/>

            <Button
                android:id="@+id/buttonHourly"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_hourly"
                android:height="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textSize="15sp"
                style="?attr/materialButtonOutlinedStyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonDaily"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/buttonDaily"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/button_daily"
                android:height="50dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:shadowColor="@color/gray"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textSize="15sp"
                style="?attr/materialButtonOutlinedStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonHourly"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>