<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/temperature"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/statusIcon"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_temperature"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/temperatureValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/statusIcon"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:adjustViewBounds="false"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/weather_icon_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/temperature"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/feels"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/temperature"
            app:layout_constraintEnd_toStartOf="@id/humidity"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_feels_like"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/feelsLikeValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/humidity"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/statusIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/wind">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_humidity"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wind"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/feels"
            app:layout_constraintEnd_toStartOf="@id/humidity"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_wind_speed"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/windSpeedValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rain"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cloudCover">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_rain_chance"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/rainChanceValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cloudCover"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/wind"
            app:layout_constraintEnd_toStartOf="@id/rain"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_cloud_cover"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/cloudCoverValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/visibility"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/cloudCover"
            app:layout_constraintEnd_toStartOf="@id/pressure"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_visibility"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/visibilityValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/pressure"
            android:layout_height="80dp"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:shadowColor="@color/gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:layout_constraintTop_toBottomOf="@id/rain"
            app:layout_constraintStart_toEndOf="@id/visibility"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_surface_pressure"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>

                <TextView
                    android:id="@+id/pressureValue"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/text"
                    android:shadowColor="@color/gray"
                    android:textSize="30sp"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>